Fixed NSFW image blur spilling outside the preview
* Hide overflow of wrapping picture element
  to contain the blur of the inner img element.
* This aligns the visible image area to the
  clickable area.
* fixes #1245

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -434,3 +434,6 @@ br.big {
 em-emoji-picker {
   width: 100%;
 }
+.overflow-hidden {
+  overflow: hidden;
+}
